// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Text checkGrammar 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkGrammar 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkGrammar 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkGrammar 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkHighlight 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkHighlight 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkHighlight 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkHighlight 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkSpaces 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkSpaces 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkSpaces 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text checkSpaces 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text className 1`] = `
<div
  className="uu5-bricks-text uu5-common-text my-classname uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 1`] = `
<div
  className="color-schema-default uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 2`] = `
<div
  className="color-schema-red uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 3`] = `
<div
  className="color-schema-red uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 4`] = `
<div
  className="color-schema-red-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 5`] = `
<div
  className="color-schema-red-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 6`] = `
<div
  className="color-schema-green uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 7`] = `
<div
  className="color-schema-green uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 8`] = `
<div
  className="color-schema-green-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 9`] = `
<div
  className="color-schema-green-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 10`] = `
<div
  className="color-schema-yellow uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 11`] = `
<div
  className="color-schema-yellow uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 12`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 13`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 14`] = `
<div
  className="color-schema-purple uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 15`] = `
<div
  className="color-schema-purple uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 16`] = `
<div
  className="color-schema-purple-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 17`] = `
<div
  className="color-schema-purple-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 18`] = `
<div
  className="color-schema-brown uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 19`] = `
<div
  className="color-schema-brown uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 20`] = `
<div
  className="color-schema-brown-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 21`] = `
<div
  className="color-schema-brown-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 22`] = `
<div
  className="color-schema-orange uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 23`] = `
<div
  className="color-schema-orange uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 24`] = `
<div
  className="color-schema-orange-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 25`] = `
<div
  className="color-schema-orange-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 26`] = `
<div
  className="color-schema-cyan uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 27`] = `
<div
  className="color-schema-cyan uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 28`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 29`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 30`] = `
<div
  className="color-schema-grey uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 31`] = `
<div
  className="color-schema-grey uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 32`] = `
<div
  className="color-schema-grey-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 33`] = `
<div
  className="color-schema-grey-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 34`] = `
<div
  className="color-schema-pink uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 35`] = `
<div
  className="color-schema-pink uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 36`] = `
<div
  className="color-schema-pink-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 37`] = `
<div
  className="color-schema-pink-rich uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text colorSchema 38`] = `
<div
  className="color-schema-pink uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text content 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Text content 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Text content 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Text content 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Text controlled 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text controlled 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text controlled 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text controlled 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text default props 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text disabled 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-disabled uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Text disabled 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text disabled 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text disabled 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-disabled uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Text docKit examples UU5.Bricks.Text should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Text
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    Text in Bricks.Text
  </Text>
  <Text
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={true}
    dynamic={false}
    hidden={false}
    id="uuID03"
    ignoreInnerHTML={false}
    key="uuID03"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    Text is disabled in Bricks.Text
  </Text>
  <Text
    className="center"
    colorSchema="cyan"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID04"
    ignoreInnerHTML={false}
    key="uuID04"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </Text>
  <br
    key="uu5-content-3"
  />
  <Text
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID05"
    ignoreInnerHTML={false}
    key="uuID05"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in leo sed odio dictum pellentesque.
    <Text
      className={null}
      colorSchema="red"
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID06"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      Suspendisse sagittis accumsan mi, a pulvinar sem luctus nec.
    </Text>
    Morbi pharetra eleifend mauris in viverra. Morbi turpis diam.
  </Text>
</div>
`;

exports[`UU5.Bricks.Text dynamic 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text dynamic 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text dynamic 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text dynamic 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text hidden 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-hidden uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text hidden 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text hidden 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text hidden 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-hidden uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text id 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text ignoreHTML 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text ignoreHTML 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text ignoreHTML 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text ignoreHTML 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text mainAttrs 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text name 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 5`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 6`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 7`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 8`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 9`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 10`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 11`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 12`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 13`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 14`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 15`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 16`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 17`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 18`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 19`] = `
<span
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-inline"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text nestingLevel 20`] = `
<span
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-inline"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text noIndex 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-noindex uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text noIndex 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text noIndex 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text noIndex 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-noindex uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text pureRender 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text pureRender 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text pureRender 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text pureRender 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text selected 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-selected uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text selected 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text selected 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text selected 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-common-selected uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text style 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Text style 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Text style 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Text style 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Text textCorrector 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text textCorrector 2`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text textCorrector 3`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text textCorrector 4`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Text tooltip 1`] = `
<div
  className="uu5-bricks-text uu5-common-text uu5-bricks-text-nesting-level-small-box"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
